[package]
name = "bestool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0.37"
tracing = "0.1"
tracing-subscriber = "0.3"
crc = "3.0.0"
