[package]
name = "oldbestool"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
clap = { version = "4.4.8", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
crc = "3.0.1"


[profile.release]
lto = "fat"
build-override.codegen-units = 1
